# origin

Lesson1/Task1/: ex01.cpp
Lesson1/Task2/: ex02.cpp
Lesson1/Task3/: ex03.cpp
Lesson10/task1/: CMakeLists.txt  readme.txt
Lesson10/task1/src/: CMakeLists.txt  main.cpp
Lesson10/task2/: readme.txt  task2.sln
Lesson10/task2/client_dll/: client_dll.vcxproj
Lesson10/task2/leaver/: leaver.cpp  leaver.h  leaver.vcxproj
Lesson10/task3/: CMakeLists.txt  readme.txt
Lesson10/task3/src/: CMakeLists.txt  main.cpp
Lesson10/task3/src/leaver/: leaver.cpp  leaver.h
Lesson10/task4/: readme.txt  task4.sln
Lesson10/task4/geometry/: equilateral_triangle.cpp  equilateral_triangle.h  figure.cpp  figure.h  geometry.vcxproj  isosceles_triangle.cpp  isosceles_triangle.h  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  right_triangle.cpp  right_triangle.h  square.cpp  square.h  triangle.cpp  triangle.h
Lesson10/task4/task4/: task4.vcxproj
Lesson10/task5/: CMakeLists.txt  readme.txt
Lesson10/task5/src/: CMakeLists.txt  task5.cpp
Lesson10/task5/src/geometry/: figure.h  isosceles_triangle.h  parallelogram.cpp  quadrangle.h  rectangle.h  rhombus.cpp  rhombus.h  square.cpp  triangle.h
Lesson2/Task1/: CMakeLists.txt  task1.cpp
Lesson2/Task2/: CMakeLists.txt  task2.cpp
Lesson3/Task1/: CMakeLists.txt  task1.cpp
Lesson3/Task2/: in.txt  task2.cpp
Lesson4/Task1/: CMakeLists.txt  task1.cpp
Lesson4/Task2/: task2.cpp
Lesson4/Task3/: CMakeLists.txt  task3.cpp
Lesson5/Task1/: CMakeLists.txt  calculator.cpp  calculator.h  task1.cpp
Lesson5/Task2/: CMakeLists.txt  counter.cpp  counter.h  task2.cpp  tester.cpp  tester.h
Lesson5/Task3/: CMakeLists.txt  equilateral_triangle.h  figure.cpp  parallelogram.h  rectangle.cpp  right_triangle.h  square.h
Lesson6/Task1/: CMakeLists.txt  task1.cpp
Lesson6/Task2/: CMakeLists.txt  task2.cpp
Lesson7/Task1/: CMakeLists.txt  main.cpp
Lesson7/Task2/: CMakeLists.txt  equilateral_triangle.cpp  equilateral_triangle.h  figure.cpp  figure.h  geometric_exception.cpp  geometric_exception.h  isosceles_triangle.cpp  isosceles_triangle.h  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  right_triangle.cpp  right_triangle.h  square.cpp  square.h  task2.cpp  triangle.cpp  triangle.h
Lesson8/task1/: task1.cpp
Lesson8/task2/: CMakeLists.txt  task2.cpp
Lesson9/task1/: readme.txt
Lesson9/task1/src/: CMakeLists.txt  main.cpp
Lesson9/task2/: CMakeLists.txt  readme.txt
Lesson9/task2/src/: equilateral_triangle.cpp  isosceles_triangle.cpp  quadrangle.cpp  right_triangle.cpp  task2.cpp  triangle.cpp
cpp-diplom2/: CMakeLists.txt  readme.txt
cpp-diplom2/src/: CMakeLists.txt  race_driver.cpp
cpp-diplom2/src/race_objects/: boots.cpp  boots.h  broom.cpp  broom.h  camel.cpp  camel.h  centaur.cpp  centaur.h  constants.h  eagle.cpp  eagle.h  fast_camel.cpp  fast_camel.h  flying_carpet.cpp  flying_carpet.h  vehicle.h  vehicle_air.cpp  vehicle_air.h  vehicle_land.cpp  vehicle_land.h
cpp-diplom2/src/simulator/: simulator.cpp  simulator.h
cppl-homeworks/01/ex01/: main.cpp
cppl-homeworks/01/ex02/: CMakeLists.txt  main.cpp
cppl-homeworks/01/ex03/: CMakeLists.txt  main.cpp
cppl-homeworks/02/ex01/: CMakeLists.txt  main.cpp
cppl-homeworks/03/ex01/: CMakeLists.txt  main.cpp  readme.txt  smart_array.cpp  smart_array.h
cppl-homeworks/03/ex02/: CMakeLists.txt  main.cpp  readme.txt  smart_array.cpp  smart_array.h
cppl-homeworks/04/: readme.txt
cppl-homeworks/04/ex01/: CMakeLists.txt  build.cmd  main.cpp  readme.txt
cppl-homeworks/04/ex02/: CMakeLists.txt  main.cpp
cppl-homeworks/04/ex02/src/: list.h  test_case.cpp
cppl-homeworks/05/ex01/: main.cpp
cppl-homeworks/05/ex02/: main.cpp
cppl-homeworks/05/ex03/: CMakeLists.txt  main.cpp
cppl-homeworks/07/ex01/: CMakeLists.txt  main.cpp
cppl-homeworks/07/ex01_1/: CMakeLists.txt  main.cpp  readme.txt
cppl-homeworks/07/ex02/: CMakeLists.txt  main.cpp
cppl-homeworks/07/ex03/: CMakeLists.txt
cppl-homeworks/07/ex03/src/: main.cpp  simple_vector.h  test_case.cpp
cppl-homeworks/08/ex01/: main.cpp
cppl-homeworks/08/ex02/: main.cpp
cppl-homeworks/08/ex02_1/: CMakeLists.txt  main.cpp
cppl-homeworks/10/ex01/: main.cpp
cppl-homeworks/10/ex02/: main.cpp
cppl-homeworks/10/ex03/: CMakeLists.txt  main.cpp  readme.txt  tests.cpp
cppl-homeworks/10/ex03/scripts/: build.cmd  test_build.cmd
cppl-homeworks/10/ex03/src/: CMakeLists.txt  main.cpp  simple_unique_ptr.h
cppl-homeworks/10/ex03/unit_tests/: CMakeLists.txt  tests.cpp
cppl-homeworks/11/ex01/: CMakeLists.txt  main.cpp
ini_parser/: parser.sln  readme.txt
ini_parser/parser/: config.ini  ini_parser.cpp  ini_parser.h  main.cpp  parser.vcxproj  string_utils.h
iot-homeworks/03/: readme.md
iot-homeworks/04/: readme.md
iot-homeworks/05/: readme.md
iot-homeworks/07/: readme.md
iot-homeworks/08/: readme.md
iot-homeworks/10/: readme.md
map_homeworks/04/: test.cpp
map_homeworks/04/task1/: CMakeLists.txt  shape.cpp  shape.h
map_homeworks/thread_safe_queue/: safe_queue.h  thread_pool.cpp  thread_pool.h  thread_safe_queue.cpp  thread_safe_queue.sln  thread_safe_queue.vcxproj
pue-homeworks/03/: CppBaseActor.cpp  CppBaseActor.h
qt-homeworks/02/task1/: CMakeLists.txt  main.cpp
qt-homeworks/06/task1/: CMakeLists.txt  ExampleRace.cpp  ExampleRace.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt-homeworks/07/task1/: CMakeLists.txt  graphic.cpp  graphic.h  graphic.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt-homeworks/08/task1/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  setdbconnection.cpp  setdbconnection.h
qt-homeworks/qt_coursework/: CMakeLists.txt  about.cpp  about.h  about.ui  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  setdbconnection.cpp  setdbconnection.h  setdbconnection.ui  statistics.cpp  statistics.h  statistics.ui  utility.h  матрица требований.xlsx
(+236 files in other folders)
